# PyOngc

./: .appveyor.yml  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Pipfile  README.md  README.rst  ongc.db  ongc.py  ongcbrowse.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  python-package.yml
.reuse/: dep5
LICENSES/: MIT.txt
database/: NGC.csv.license  createdb.py
docs/: Makefile  conf.py  index.rst  make.bat  readme.rst
docs/cli/: ongc.rst
docs/examples/: examples.rst
docs/modules/: data.rst  exceptions.rst  index.rst  ongc.rst
docs/ongc/: classes.rst  exceptions.rst  functions.rst  ongc_module.rst
helper/: NGC.csv  addendum.csv  createdb  createdb.py
pyongc/: __init__.py  exceptions.py  ongc.db  ongc.py
pyongc/scripts/: ongc.py
src/pyongc/: __init__.py  data.py  exceptions.py  ongc.py
src/pyongc/scripts/: ongc.py
test/: test_ongc.py
test/scripts/: test_ongc.py
tests/: __init__.py  test_data.py  test_ongc.py
tests/scripts/: test_ongc.py
