[metadata]
name = PyOngc
version = attr: pyongc.__version__
author = Mattia Verga
author_email = mattia.verga@tiscali.it
url = https://github.com/mattiaverga/PyOngc
description = Python interface to OpenNGC database data
long_description = file: README.rst
keywords = astronomy, database
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    Click
    numpy
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
pyongc = ongc.db

[options.entry_points]
console_scripts =
    ongc = pyongc.scripts.ongc:cli

[options.extras_require]
data = pandas
development = pytest; mock; flake8; pytest-cov
docs = sphinx; sphinx_rtd_theme

[tool.setuptools_scm]
